Fix Add Reply link vertical alignment (#574)

--- a/app/assets/stylesheets/pages/profiles/profile_page.sass
+++ b/app/assets/stylesheets/pages/profiles/profile_page.sass
@@ -1502,6 +1502,7 @@
             font-size: 11px
             line-height: 100%
             margin-top: 5px
+            float: left
           .reply_comment
             font-size: 11px
             a
